microservices-eks/kubernetes/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: microservices

spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend


  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
        - name: frontend
          
          image: vishu0939/frontend:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
