microservices-eks/kubernetes/product-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: product-service
  namespace: microservices

spec:
  replicas: 2

  selector:
    matchLabels:
      app: product-service

  template:
    metadata:
      labels:
        app: product-service

    spec:
      containers:
        - name: product-service
          image: vishu0939/product-service:v2
          imagePullPolicy: Always

          ports:
            - containerPort: 5002
