microservices-eks/kubernetes/user-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-services
  namespace: microservices

spec:
  replicas: 2
  
  selector:
    matchLabels:
      app: user-services

  template:
    metadata:
      labels:
        app: user-services

    spec:
     containers:
     - name: user-services
       image: vishu0939/user-service:v2
       imagePullPolicy: Always


       ports:
         - containerPort: 5001
