microservices-eks/kubernetes/frontend-services.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: microservices

spec:
  selector:
    app: frontend

  ports:
   - protocol: TCP
     port: 5000
     targetPort: 5000

  type: NodePort
