microservices-eks/kubernetes/product-service.yml
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: microservices

spec:
  selector:
    app: product-service


  ports:
    - protocol: TCP
      port: 5002
      targetPort: 5002

  type: ClusterIP
