microservices-eks/kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: microservices-ingress
  namespace: microservices

  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip


    # HTTPS Listener
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'

    # Redirect HTTP -> HTTPS
    alb.ingress.kubernetes.io/ssl-redirect: '443'

    # ACM Certificate
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-1:767828765892:certificate/363c1851-c5fc-48b7-b85a-dbda34060444



spec:
  ingressClassName: alb

  rules:
  - host: aide-v.xyz 
    http:
      paths:

      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 5000

      - path: /users
        pathType: Prefix
        backend:
          service:
            name: user-services              #service name ---- kubectl get svc
            port:
              number: 5001

      - path: /products
        pathType: Prefix
        backend:
          service:
            name: product-service
            port:
              number: 5002
